[ISSUE #14815] build(style): apply Spotless formatting to core module
Apply Eclipse JDT Formatter via Spotless to all Java source files in
the core module (435 files). Add missing Javadoc to 3 methods in
NacosApiExceptionHandler exposed by line wrapping.

Assisted-by: Claude Code
Signed-off-by: cxhello <caixiaohuichn@gmail.com>