@@ -81,15 +81,19 @@ class ServerMemberManagerTest {
     
     @BeforeEach
     void setUp() throws Exception {
-        when(environment.getProperty("nacos.server.main.port", Integer.class, 8848)).thenReturn(8848);
-        when(environment.getProperty("nacos.member-change-event.queue.size", Integer.class, 128)).thenReturn(128);
+        when(environment.getProperty("nacos.server.main.port", Integer.class, 8848))
+            .thenReturn(8848);
+        when(environment.getProperty("nacos.member-change-event.queue.size", Integer.class, 128))
+            .thenReturn(128);
         ApplicationUtils.injectContext(context);
         EnvUtil.setEnvironment(environment);
         EnvUtil.setIsStandalone(true);
         serverMemberManager = new ServerMemberManager();
-        serverMemberManager.updateMember(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.UP).build());
+        serverMemberManager
+            .updateMember(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.UP).build());
         serverMemberManager.getMemberAddressInfos().add("1.1.1.1:8848");
-        NotifyCenter.getPublisherMap().put(MembersChangeEvent.class.getCanonicalName(), eventPublisher);
+        NotifyCenter.getPublisherMap().put(MembersChangeEvent.class.getCanonicalName(),
+            eventPublisher);
         // Pin serverList to exactly self + 1.1.1.1 so tests are deterministic (lookup may add members in some envs)
         ConcurrentSkipListMap<String, Member> pinned = new ConcurrentSkipListMap<>();
         pinned.put(serverMemberManager.getSelf().getAddress(), serverMemberManager.getSelf());
@@ -114,7 +118,8 @@ class ServerMemberManagerTest {
     void testUpdateNonExistMember() {
         Member newMember = Member.builder().ip("1.1.1.2").port(8848).state(NodeState.UP).build();
         assertFalse(serverMemberManager.update(newMember));
-        assertFalse(serverMemberManager.update(Member.builder().ip("10.0.0.1").port(9999).state(NodeState.UP).build()));
+        assertFalse(serverMemberManager
+            .update(Member.builder().ip("10.0.0.1").port(9999).state(NodeState.UP).build()));
     }
     
     @Test
@@ -132,7 +137,8 @@ class ServerMemberManagerTest {
         assertTrue(serverMemberManager.update(newMember));
         assertTrue(serverMemberManager.getMemberAddressInfos().contains("1.1.1.1:8848"));
         assertEquals("testVersion",
-                serverMemberManager.getServerList().get("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
+            serverMemberManager.getServerList().get("1.1.1.1:8848")
+                .getExtendVal(MemberMetaDataConstants.VERSION));
         verify(eventPublisher).publish(any(MembersChangeEvent.class));
     }
     
@@ -142,7 +148,8 @@ class ServerMemberManagerTest {
         newMember.setExtendVal("naming", "test");
         assertTrue(serverMemberManager.update(newMember));
         assertTrue(serverMemberManager.getMemberAddressInfos().contains("1.1.1.1:8848"));
-        assertEquals("test", serverMemberManager.getServerList().get("1.1.1.1:8848").getExtendVal("naming"));
+        assertEquals("test",
+            serverMemberManager.getServerList().get("1.1.1.1:8848").getExtendVal("naming"));
         verify(eventPublisher, never()).publish(any(MembersChangeEvent.class));
     }
     
@@ -150,7 +157,7 @@ class ServerMemberManagerTest {
     void testHasMember() {
         assertTrue(serverMemberManager.hasMember("1.1.1.1"));
     }
-
+    
     @Test
     void testHasMemberExactAddress() {
         assertTrue(serverMemberManager.hasMember("1.1.1.1:8848"));
@@ -173,25 +180,31 @@ class ServerMemberManagerTest {
     void testIsUnHealth() {
         assertFalse(serverMemberManager.isUnHealth("1.1.1.1"));
     }
-
+    
     @Test
     void testIsUnHealthWhenMemberDown() {
-        serverMemberManager.update(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build());
+        serverMemberManager
+            .update(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build());
         assertTrue(serverMemberManager.isUnHealth("1.1.1.1:8848"));
     }
-
+    
     @Test
     void testIsUnHealthUnknownAddress() {
         assertFalse(serverMemberManager.isUnHealth("10.0.0.1:8848"));
     }
-
+    
     @Test
     void testStateCheck() {
-        assertTrue(serverMemberManager.stateCheck("1.1.1.1:8848", Collections.singletonList(NodeState.UP)));
-        assertTrue(serverMemberManager.stateCheck("1.1.1.1:8848", List.of(NodeState.UP, NodeState.DOWN)));
-        assertFalse(serverMemberManager.stateCheck("10.0.0.1:8848", Collections.singletonList(NodeState.UP)));
-        serverMemberManager.update(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build());
-        assertTrue(serverMemberManager.stateCheck("1.1.1.1:8848", Collections.singletonList(NodeState.DOWN)));
+        assertTrue(serverMemberManager.stateCheck("1.1.1.1:8848",
+            Collections.singletonList(NodeState.UP)));
+        assertTrue(
+            serverMemberManager.stateCheck("1.1.1.1:8848", List.of(NodeState.UP, NodeState.DOWN)));
+        assertFalse(serverMemberManager.stateCheck("10.0.0.1:8848",
+            Collections.singletonList(NodeState.UP)));
+        serverMemberManager
+            .update(Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build());
+        assertTrue(serverMemberManager.stateCheck("1.1.1.1:8848",
+            Collections.singletonList(NodeState.DOWN)));
     }
     
     @Test
@@ -203,9 +216,10 @@ class ServerMemberManagerTest {
     void testGetServerList() {
         assertEquals(2, serverMemberManager.getServerList().size());
         Map<String, Member> list = serverMemberManager.getServerList();
-        assertThrows(UnsupportedOperationException.class, () -> list.put("x", Member.builder().ip("x").port(1).build()));
+        assertThrows(UnsupportedOperationException.class,
+            () -> list.put("x", Member.builder().ip("x").port(1).build()));
     }
-
+    
     /**
      * After init(), serverList always contains at least self (line 168). Nothing between 168 and 177 removes it,
      * so the throw at line 177-178 (serverList.isEmpty()) is theoretically unreachable in normal flow.
@@ -213,25 +227,27 @@ class ServerMemberManagerTest {
     @Test
     void testInitServerListNeverEmpty() {
         assertFalse(serverMemberManager.getServerList().isEmpty());
-        assertTrue(serverMemberManager.getServerList().containsKey(serverMemberManager.getSelf().getAddress()));
+        assertTrue(serverMemberManager.getServerList()
+            .containsKey(serverMemberManager.getSelf().getAddress()));
     }
-
+    
     @Test
     void testSetSelfReady() {
         serverMemberManager.setSelfReady(8848);
         assertEquals(NodeState.UP, serverMemberManager.getSelf().getState());
     }
-
+    
     @Test
     void testUnhealthyMemberInfoReportTaskRunsAfter() {
         Member downMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
         downMember.setAbilities(new ServerAbilities());
         downMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(downMember);
-        Object unhealthyTask = ReflectionTestUtils.getField(serverMemberManager, "unhealthyMemberInfoReportTask");
+        Object unhealthyTask =
+            ReflectionTestUtils.getField(serverMemberManager, "unhealthyMemberInfoReportTask");
         ((Runnable) unhealthyTask).run();
     }
-
+    
     /**
      * Covers memberChange() when self is not in the incoming members list (lines 367-370: isInIpList = false, add self, warn log).
      * Must pass a mutable collection because memberChange() adds self when not in list.
@@ -239,12 +255,14 @@ class ServerMemberManagerTest {
     @Test
     void testMemberChangeWhenSelfNotInList() {
         Member other = Member.builder().ip("2.2.2.2").port(8848).state(NodeState.UP).build();
-        boolean result = serverMemberManager.memberChange(new java.util.ArrayList<>(Collections.singletonList(other)));
+        boolean result = serverMemberManager
+            .memberChange(new java.util.ArrayList<>(Collections.singletonList(other)));
         assertTrue(result);
-        assertTrue(serverMemberManager.getServerList().containsKey(serverMemberManager.getSelf().getAddress()));
+        assertTrue(serverMemberManager.getServerList()
+            .containsKey(serverMemberManager.getSelf().getAddress()));
         assertTrue(serverMemberManager.getServerList().containsKey("2.2.2.2:8848"));
     }
-
+    
     /**
      * Covers memberChange() when there is no change (lines 411-414: hasChange false, debug log branch).
      */
@@ -255,28 +273,31 @@ class ServerMemberManagerTest {
         assertFalse(result);
         assertEquals(current.size(), serverMemberManager.getServerList().size());
     }
-
+    
     /**
      * Covers stateCheck(address, ...) and isUnHealth(address) when member is null (address not in serverList) — lines 451-453 and 471-472.
      */
     @Test
     void testStateCheckAndIsUnHealthWhenAddressNotInList() {
-        assertFalse(serverMemberManager.stateCheck("0.0.0.0:9999", Collections.singletonList(NodeState.UP)));
+        assertFalse(serverMemberManager.stateCheck("0.0.0.0:9999",
+            Collections.singletonList(NodeState.UP)));
         assertFalse(serverMemberManager.isUnHealth("0.0.0.0:9999"));
     }
     
     @Test
     void testHttpReportTaskWithoutMemberInfo() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         assertTrue(
-                serverMemberManager.find("1.1.1.1:8848").getExtendInfo().containsKey(MemberMetaDataConstants.VERSION));
+            serverMemberManager.find("1.1.1.1:8848").getExtendInfo()
+                .containsKey(MemberMetaDataConstants.VERSION));
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             RestResult<String> result = RestResultUtils.success("true");
@@ -284,27 +305,33 @@ class ServerMemberManagerTest {
             return null;
         }).when(mockAsyncRestTemplate).post(anyString(), any(), any(), any(), any(), any());
         serverMemberManager.getInfoReportTask().run();
-        assertEquals("test", serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
+        assertEquals("test",
+            serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
     
     @Test
     void testGrpcReportTaskWithoutMemberInfo() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         serverMemberManager.updateMember(testMember);
         assertTrue(
-                serverMemberManager.find("1.1.1.1:8848").getExtendInfo().containsKey(MemberMetaDataConstants.VERSION));
-        ServerMemberManager.MemberInfoReportTask infoReportTask = serverMemberManager.getInfoReportTask();
+            serverMemberManager.find("1.1.1.1:8848").getExtendInfo()
+                .containsKey(MemberMetaDataConstants.VERSION));
+        ServerMemberManager.MemberInfoReportTask infoReportTask =
+            serverMemberManager.getInfoReportTask();
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
-        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy", clusterRpcClientProxy);
+        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy",
+            clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(true);
         testMember.setState(NodeState.UP);
-        when(clusterRpcClientProxy.sendRequest(any(), any())).thenReturn(new MemberReportResponse(testMember));
+        when(clusterRpcClientProxy.sendRequest(any(), any()))
+            .thenReturn(new MemberReportResponse(testMember));
         infoReportTask.run();
-        assertEquals("test", serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
+        assertEquals("test",
+            serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
     
@@ -315,7 +342,8 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             RestResult<String> result = RestResultUtils.success("not-valid-json");
@@ -325,7 +353,7 @@ class ServerMemberManagerTest {
         serverMemberManager.getInfoReportTask().run();
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
-
+    
     @Test
     void testHttpReportTaskHandleReportResultBooleanTrue() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -333,7 +361,8 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             RestResult<String> result = RestResultUtils.success(Boolean.TRUE.toString());
@@ -343,21 +372,23 @@ class ServerMemberManagerTest {
         serverMemberManager.getInfoReportTask().run();
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
-
+    
     @Test
     void testHttpReportTaskWithMemberInfoChanged() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         assertTrue(
-                serverMemberManager.find("1.1.1.1:8848").getExtendInfo().containsKey(MemberMetaDataConstants.VERSION));
+            serverMemberManager.find("1.1.1.1:8848").getExtendInfo()
+                .containsKey(MemberMetaDataConstants.VERSION));
         Member newMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "new")).build();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "new")).build();
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             RestResult<String> result = RestResultUtils.success(JacksonUtils.toJson(newMember));
@@ -365,31 +396,37 @@ class ServerMemberManagerTest {
             return null;
         }).when(mockAsyncRestTemplate).post(anyString(), any(), any(), any(), any(), any());
         serverMemberManager.getInfoReportTask().run();
-        assertEquals("new", serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
+        assertEquals("new",
+            serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
     
     @Test
     void testGrpcReportTaskWithMemberInfoChanged() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "test")).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         serverMemberManager.updateMember(testMember);
         assertTrue(
-                serverMemberManager.find("1.1.1.1:8848").getExtendInfo().containsKey(MemberMetaDataConstants.VERSION));
+            serverMemberManager.find("1.1.1.1:8848").getExtendInfo()
+                .containsKey(MemberMetaDataConstants.VERSION));
         Member newMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.UP)
-                .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "new")).build();
-        ServerMemberManager.MemberInfoReportTask infoReportTask = serverMemberManager.getInfoReportTask();
+            .extendInfo(Collections.singletonMap(MemberMetaDataConstants.VERSION, "new")).build();
+        ServerMemberManager.MemberInfoReportTask infoReportTask =
+            serverMemberManager.getInfoReportTask();
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
-        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy", clusterRpcClientProxy);
+        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy",
+            clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(true);
-        when(clusterRpcClientProxy.sendRequest(any(), any())).thenReturn(new MemberReportResponse(newMember));
+        when(clusterRpcClientProxy.sendRequest(any(), any()))
+            .thenReturn(new MemberReportResponse(newMember));
         infoReportTask.run();
-        assertEquals("new", serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
+        assertEquals("new",
+            serverMemberManager.find("1.1.1.1:8848").getExtendVal(MemberMetaDataConstants.VERSION));
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
-
+    
     @Test
     void testUnhealthyMemberInfoReportTaskRun() throws NacosException {
         Member downMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -397,19 +434,21 @@ class ServerMemberManagerTest {
         downMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         downMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(true);
         serverMemberManager.updateMember(downMember);
-
-        Object unhealthyTask = ReflectionTestUtils.getField(serverMemberManager, "unhealthyMemberInfoReportTask");
+        
+        Object unhealthyTask =
+            ReflectionTestUtils.getField(serverMemberManager, "unhealthyMemberInfoReportTask");
         assertTrue(unhealthyTask instanceof Runnable);
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
         ReflectionTestUtils.setField(unhealthyTask, "clusterRpcClientProxy", clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(true);
         Member upMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.UP).build();
-        when(clusterRpcClientProxy.sendRequest(any(), any())).thenReturn(new MemberReportResponse(upMember));
-
+        when(clusterRpcClientProxy.sendRequest(any(), any()))
+            .thenReturn(new MemberReportResponse(upMember));
+        
         ((Runnable) unhealthyTask).run();
         assertEquals(NodeState.UP, serverMemberManager.find("1.1.1.1:8848").getState());
     }
-
+    
     @Test
     void testMemberInfoReportTaskRunWhenMembersEmpty() {
         ConcurrentSkipListMap<String, Member> onlySelf = new ConcurrentSkipListMap<>();
@@ -419,7 +458,7 @@ class ServerMemberManagerTest {
         serverMemberManager.getMemberAddressInfos().add(serverMemberManager.getSelf().getAddress());
         serverMemberManager.getInfoReportTask().run();
     }
-
+    
     @Test
     void testHttpReportTaskCallbackOnReceiveNotOk() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -427,7 +466,8 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             RestResult<String> result = RestResultUtils.failed("error");
@@ -437,7 +477,7 @@ class ServerMemberManagerTest {
         serverMemberManager.getInfoReportTask().run();
         assertTrue(serverMemberManager.find("1.1.1.1:8848").isGrpcReportEnabled());
     }
-
+    
     @Test
     void testHttpReportTaskCallbackOnError() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -445,7 +485,8 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             callback.onError(new RuntimeException("mock error"));
@@ -454,7 +495,7 @@ class ServerMemberManagerTest {
         serverMemberManager.getInfoReportTask().run();
         assertTrue(serverMemberManager.find("1.1.1.1:8848").isGrpcReportEnabled());
     }
-
+    
     @Test
     void testHttpReportTaskCallbackOnCancel() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -462,7 +503,8 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocationOnMock -> {
             Callback<String> callback = invocationOnMock.getArgument(5);
             callback.onCancel();
@@ -470,7 +512,7 @@ class ServerMemberManagerTest {
         }).when(mockAsyncRestTemplate).post(anyString(), any(), any(), any(), any(), any());
         serverMemberManager.getInfoReportTask().run();
     }
-
+    
     @Test
     void testHttpReportTaskPostThrows() {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -478,43 +520,48 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(false);
         serverMemberManager.updateMember(testMember);
         NacosAsyncRestTemplate mockAsyncRestTemplate = mock(NacosAsyncRestTemplate.class);
-        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate", mockAsyncRestTemplate);
+        ReflectionTestUtils.setField(serverMemberManager, "asyncRestTemplate",
+            mockAsyncRestTemplate);
         doAnswer(invocation -> {
             throw new RuntimeException("post failed");
         }).when(mockAsyncRestTemplate).post(anyString(), any(), any(), any(), any(), any());
         serverMemberManager.getInfoReportTask().run();
         assertTrue(serverMemberManager.find("1.1.1.1:8848").isGrpcReportEnabled());
     }
-
+    
     @Test
     void testGrpcReportTaskWhenNotRunning() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         serverMemberManager.updateMember(testMember);
-        ServerMemberManager.MemberInfoReportTask infoReportTask = serverMemberManager.getInfoReportTask();
+        ServerMemberManager.MemberInfoReportTask infoReportTask =
+            serverMemberManager.getInfoReportTask();
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
-        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy", clusterRpcClientProxy);
+        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy",
+            clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(false);
         infoReportTask.run();
     }
-
+    
     @Test
     void testGrpcReportTaskResponseNotSuccess() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
         testMember.setAbilities(new ServerAbilities());
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         serverMemberManager.updateMember(testMember);
-        ServerMemberManager.MemberInfoReportTask infoReportTask = serverMemberManager.getInfoReportTask();
+        ServerMemberManager.MemberInfoReportTask infoReportTask =
+            serverMemberManager.getInfoReportTask();
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
-        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy", clusterRpcClientProxy);
+        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy",
+            clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(true);
         MemberReportResponse errorResponse = new MemberReportResponse();
         errorResponse.setErrorInfo(500, "server error");
         when(clusterRpcClientProxy.sendRequest(any(), any())).thenReturn(errorResponse);
         infoReportTask.run();
     }
-
+    
     @Test
     void testGrpcReportTaskNoHandlerException() throws NacosException {
         Member testMember = Member.builder().ip("1.1.1.1").port(8848).state(NodeState.DOWN).build();
@@ -522,17 +569,20 @@ class ServerMemberManagerTest {
         testMember.getAbilities().getRemoteAbility().setSupportRemoteConnection(true);
         testMember.getAbilities().getRemoteAbility().setGrpcReportEnabled(true);
         serverMemberManager.updateMember(testMember);
-        ServerMemberManager.MemberInfoReportTask infoReportTask = serverMemberManager.getInfoReportTask();
+        ServerMemberManager.MemberInfoReportTask infoReportTask =
+            serverMemberManager.getInfoReportTask();
         ClusterRpcClientProxy clusterRpcClientProxy = mock(ClusterRpcClientProxy.class);
-        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy", clusterRpcClientProxy);
+        ReflectionTestUtils.setField(infoReportTask, "clusterRpcClientProxy",
+            clusterRpcClientProxy);
         when(clusterRpcClientProxy.isRunning(any())).thenReturn(true);
         when(clusterRpcClientProxy.sendRequest(any(), any()))
-                .thenThrow(new NacosException(NacosException.NO_HANDLER, "no handler"));
+            .thenThrow(new NacosException(NacosException.NO_HANDLER, "no handler"));
         infoReportTask.run();
-        assertFalse(serverMemberManager.find("1.1.1.1:8848").getAbilities().getRemoteAbility().isGrpcReportEnabled());
+        assertFalse(serverMemberManager.find("1.1.1.1:8848").getAbilities().getRemoteAbility()
+            .isGrpcReportEnabled());
         assertFalse(serverMemberManager.find("1.1.1.1:8848").isGrpcReportEnabled());
     }
-
+    
     @Test
     void testIpChangeEventSubscriber() throws InterruptedException {
         // Use fixed IPs so test is deterministic across environments (e.g. cloud runners use hostnames).
@@ -544,14 +594,15 @@ class ServerMemberManagerTest {
         String oldAddress = oldIp + ":" + port;
         ReflectionTestUtils.setField(serverMemberManager, "localAddress", oldAddress);
         @SuppressWarnings("unchecked")
-        ConcurrentSkipListMap<String, Member> serverList = (ConcurrentSkipListMap<String, Member>) ReflectionTestUtils
+        ConcurrentSkipListMap<String, Member> serverList =
+            (ConcurrentSkipListMap<String, Member>) ReflectionTestUtils
                 .getField(serverMemberManager, "serverList");
         String previousAddress = serverList.firstKey();
         serverList.remove(previousAddress);
         serverList.put(oldAddress, self);
         serverMemberManager.getMemberAddressInfos().remove(previousAddress);
         serverMemberManager.getMemberAddressInfos().add(oldAddress);
-
+        
         InetUtils.IPChangeEvent event = new InetUtils.IPChangeEvent();
         event.setOldIP(oldIp);
         event.setNewIP(newIp);
@@ -563,7 +614,7 @@ class ServerMemberManagerTest {
             Thread.sleep(100);
         }
         assertEquals(newIp, serverMemberManager.getSelf().getIp(),
-                "IP change event should be processed; async subscriber may be slow in some environments");
+            "IP change event should be processed; async subscriber may be slow in some environments");
         String newAddress = newIp + ":" + port;
         assertTrue(serverMemberManager.getServerList().containsKey(newAddress));
         assertTrue(serverMemberManager.getMemberAddressInfos().contains(newAddress));
